--- a/login.html
+++ b/login.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/navbar_footer.css">
+    <title>Document</title>
 </head>
 <body>
-    <nav>
-        
-    </nav>
+    
 </body>
 </html>
