Update no site institucional e página de login.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,15 @@
         </div>
         <img style="width: 500px; height: 710px;" src="assets/Design sem nome (1).svg" alt="">
     </main>
+
+    <section class="sobre_violino" id="sobre_violino">
+        <div  class="conteudo">
+            <h1>O que é o violino?</h1>
+            <p> Aopasopslkdsndsadan,dmas,dsasadksd
+            dsdnjasdjndsndasndadsadsd
+            assadsadsaddaadassa </p>
+        </div>
+        <img style="width:626px; height: 418px;" src="https://img.freepik.com/fotos-premium/o-jovem-musico-homem-tocando-violino_85574-5271.jpg">
+    </section>
 </body>
 </html>
