--- a/index.html
+++ b/index.html
@@ -30,13 +30,52 @@
     </main>
 
     <section class="sobre_violino" id="sobre_violino">
-        <div  class="conteudo">
+        <div  class="sv_conteudo">
             <h1>O que é o violino?</h1>
             <p> Aopasopslkdsndsadan,dmas,dsasadksd
             dsdnjasdjndsndasndadsadsd
             assadsadsaddaadassa </p>
         </div>
         <img style="width:626px; height: 418px;" src="https://img.freepik.com/fotos-premium/o-jovem-musico-homem-tocando-violino_85574-5271.jpg">
+    </section>
+
+    <section class="aprender_violino" id="aprender_violino">
+        <div class="av_conteudo">
+            <h1>Por que aprender violino?</h1>
+            <p>Blablablabla</p>
+        </div>
+        <div class="beneficio">
+                <div class="beneficio1">
+                    <img src="assets/checkbox.svg" alt="">
+                    <h3>AAcsss</h3>
+                </div>
+                <div class="beneficio1">
+                    <img src="assets/checkbox.svg" alt="">
+                    <h3>AAcsss</h3>
+                </div>
+               <div class="beneficio1">
+                    <img src="assets/checkbox.svg" alt="">
+                    <h3>AAcsss</h3>
+                </div>
+               <div class="beneficio1">
+                    <img src="assets/checkbox.svg" alt="">
+                    <h3>AAcsss</h3>
+                </div>
+        </div>
+        <div class="desafio_aprender">
+            <p>Mas... aprender violino não é fácil, ...um dos mais complexos do mundo...</p> <br>
+            <p>É então que surge a ideia do projeto...</p>
+        </div>
+    </section>
+
+    <section class="sobre_projeto" id="sobre_projeto">
+        <div  class="sp_conteudo">
+            <h1>Sobre o projeto</h1>
+            <p> Aopasopslkdsndsadan,dmas,dsasadksd
+            dsdnjasdjndsndasndadsadsd <br>
+            assadsadsaddaadasschiuhasuihasuidhasidhiua </p>
+        </div>
+        <img src="assets/computador.svg">
     </section>
 </body>
 </html>
