--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <h1>Olá de volta!</h1>
             <input type="text" placeholder="Email" id="input_email">
             <input type="text" placeholder="Senha" id="input_senha">
-            <div class="erro_login" id="div_erro"></div>
+            <div class="erro_login" id="div_erro_login"></div>
             <button><b>Entrar</b></button>
             <li>Não possui conta? <a href="#"><b>Cadastre-se</b></a></li>
         </div>
