Login validando e direcionando para a tela do usuário.

--- a/web-data-vizz/public/cadastro.html
+++ b/web-data-vizz/public/cadastro.html
@@ -39,8 +39,8 @@
                     <option value="Intermediário">Intermediário</option>
                     <option value="Avançado">Avançado</option>
                 </select> <br>
-                <input type="text" placeholder="Senha" id="input_senha">
-                <input type="text" placeholder="Confirme sua senha" id="input_confirmeSenha">
+                <input type="password" placeholder="Senha" id="input_senha">
+                <input type="password" placeholder="Confirme sua senha" id="input_confirmeSenha">
                 <div class="erro_validacao">
                     <div style="opacity: 0;" class="erro_senha" id="div_erro_senha">A senha deve conter no mínimo 8
                         caracteres.</div>
@@ -179,7 +179,6 @@
 
                 alert('Seu cadastro foi feito com sucesso!');
                 window.location.href = "login.html";
-    
             }
         }
     }
