--- a/web-data-vizz/public/telaUsuario.html
+++ b/web-data-vizz/public/telaUsuario.html
@@ -10,7 +10,7 @@
     <!--Side Bar-->
     <aside class="sidebar">
         <header class="sidebar_header">
-            <p>Olá, user!</p>
+            <p id="mensagem_usuario">Olá, user!</p>
         </header>
 
         <nav class="sidebar_botoes">
