--- a/web-data-vizz/public/telaUsuario.html
+++ b/web-data-vizz/public/telaUsuario.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles/telaUSuario.css">
 </head>
-<body>
+
+<body onload="window.location.href='#dashboard'">
     <!--Side Bar-->
     <aside class="sidebar">
         <header class="sidebar_header">
@@ -14,38 +16,38 @@
         </header>
 
         <nav class="sidebar_botoes">
-            <button>
+            <button onclick="irParaDashboard()">
                 <span>
                     <img src="assets/grafico.svg" alt="">
                     <span>Dashboard</span>
                 </span>
             </button>
 
-            <button>
+            <button onclick="irParaEstudo()">
                 <span>
                     <img src="assets/estudo.svg" alt="">
                     <span>Novo estudo</span>
                 </span>
             </button>
 
-            <button>
+            <button onclick="irParaMeta()">
                 <span>
                     <img src="assets/meta.svg" alt="">
                     <span>Metas</span>
                 </span>
             </button>
 
-            <button>
+            <button onclick="irParaConfiguracao()">
                 <span>
                     <img src="assets/configuracao.svg" alt="">
                     <span>Configurações</span>
                 </span>
             </button>
 
-            <button style="margin-bottom: 0;">
+            <button style="margin-bottom: 0;" onclick="sair()">
                 <span>
                     <img src="assets/sair.svg" alt="">
-                    <span>Sair</span>   
+                    <span>Sair</span>
                 </span>
             </button>
         </nav>
@@ -54,7 +56,7 @@
     <!--Fim Side Bar-->
 
     <!--Dashboard-->
-    <main class="dashboard">
+    <section class="dashboard" id="dashboard">
         <div class="kpis">
             <div class="kpi1">OI</div>
             <div class="kpi2">OI</div>
@@ -65,16 +67,122 @@
             <div class="grafico1">OI</div>
             <div class="grafico2">OI</div>
         </div>
-    </main>
+    </section>
+
     <!--Fim Dashboard-->
 
     <!--Estudo-->
+    <section class="estudo" id="estudo">
+        <div class="container_estudo">
+            <h1>Insira um novo estudo</h1>
+            <label class="dtEstudo">
+                Data do estudo
+                <input type="date" id="input_dtEstudo" placeholder="Data do estudo">
+            </label>
+            <label class="tempoEstudo">
+                Tempo estudado (em minutos)
+                <input type="number" id="input_tempo" placeholder="Insira o tempo">
+            </label>
+            <label class="dificuldade">
+                Maior dificuldade
+                <select name="" id="select_dificuldade">
+                    <option selected disabled value="#">Selecione uma opção</option>
+                    <option value="Arcada">Arcada</option>
+                    <option value="Vibrato">Vibrato</option>
+                    <option value="Postura">Postura</option>
+                    <option value="Dedilhado">Dedilhado</option>
+                </select>
+            </label>
+            <button><b>Registrar estudo</b></button>
+        </div>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, provident!</span>
+    </section>
     <!--Fim Estudo-->
 
     <!--Metas-->
+    <section class="meta" id="meta">
+        <div class="container_historico">
+            <h1>Minhas metas</h1>
+            <div class="tabela"></div>
+        </div>
+        <div class="nova_meta">
+            <h1>Nova meta</h1>
+            <div class="formulario_novaMeta">
+                <label>
+                    Prazo de início
+                    <input type="date">
+                </label>
+                <label>
+                    Prazo final
+                    <input type="date">
+                </label>
+                <label>
+                    Dias de estudo
+                    <input type="number">
+                </label>
+            </div>
+            <button><b>Registrar meta</b></button>
+        </div>
+    </section>
     <!--Fim Metas-->
 
     <!--Configurações-->
+    <section class="configuracao" id="configuracao">
+        <div class="topo">
+            <h1>Perfil</h1>
+            <img src="assets/Logotipo_footer.png">
+        </div>
+
+        <label>
+            Nome
+            <input type="number">
+        </label>
+        <label>
+            Sobrenome
+            <input type="number">
+        </label>
+        <label>
+            Nível
+            <input type="number">
+        </label>
+        <button><b>Salvar alterações</b></button>
+
+    </section>
     <!--Fim Configurações-->
 </body>
+
 </html>
+
+<script>
+    function irParaDashboard() {
+        dashboard.style.display = 'flex';
+        estudo.style.display = 'none';
+        meta.style.display = 'none';
+        configuracao.style.display = 'none';
+    }
+
+    function irParaEstudo() {
+        dashboard.style.display = 'none';
+        estudo.style.display = 'flex';
+        meta.style.display = 'none';
+        configuracao.style.display = 'none';
+    }
+
+    function irParaMeta() {
+        dashboard.style.display = 'none';
+        estudo.style.display = 'none';
+        meta.style.display = 'flex';
+        configuracao.style.display = 'none';
+    }
+
+    function irParaConfiguracao() {
+        dashboard.style.display = 'none';
+        estudo.style.display = 'none';
+        meta.style.display = 'none';
+        configuracao.style.display = 'flex';
+    }
+
+    function sair() {
+        window.location.href = "login.html";
+    }
+</script>
