Atualização - Estudo e metas sendo registrados no banco de dados.

--- a/web-data-vizz/public/cadastro.html
+++ b/web-data-vizz/public/cadastro.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 
     <script src="./js/sessao.js"></script>
-    <link rel="stylesheet" href="css/styles/navbar_footer.css">
-    <link rel="stylesheet" href="css/styles/cadastro.css">
+    <link rel="stylesheet" href="styles/navbar_footer.css">
+    <link rel="stylesheet" href="styles/cadastro.css">
 </head>
 
 <body>
