--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Violin Study</title>
-    <link rel="stylesheet" href="css/styles/navbar_footer.css">
-    <link rel="stylesheet" href="css/styles/index.css">
+    <link rel="stylesheet" href="styles/navbar_footer.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
@@ -98,6 +98,7 @@
                 <h1>Perguntas frequentes</h1>
                 <div class="container_pergunta">
                     <div class="pergunta1">Pergunta 1</div>
+                    <hr>
                     <div class="pergunta2">Pergunta 2</div>
                     <div class="pergunta3">Pergunta 3</div>
                 </div>
