--- a/web-data-vizz/public/login.html
+++ b/web-data-vizz/public/login.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles/navbar_footer.css">
-    <link rel="stylesheet" href="css/styles/login.css">
+    <link rel="stylesheet" href="styles/navbar_footer.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 
 <body>
