--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Violin Study</title>
-    <link rel="stylesheet" href="styles/navbar_footer.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="css/navbar_footer.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -26,8 +26,10 @@
     <main>
         <section class="inicio">
             <div class="titulo">
-                <h1>Organize seus estudos <br> de violino da melhor <br> maneira possível</h1>
-                <p>Com esse website, você pode inserir e acompanhar o <br> progresso de seus estudos diariamente. </p>
+                <h1>Organize seus estudos <br> de violino de forma <br> simples e eficiente</h1>
+                <p>Com o Violin Study, você registra seus estudos, define metas e visualiza <br> sua evolução com
+                    gráficos e indicadores-chave fáceis de entender. </p>
+
             </div>
             <img style="width: 500px; height: 710px;" src="assets/Design sem nome (1).svg" alt="">
         </section>
@@ -37,58 +39,79 @@
             <img style="width:450px; height: 539px;" src="assets/sobre_violino.png">
             <div class="sv_conteudo">
                 <h1>O que é o violino?</h1>
-                <p> Aopasopslkdsndsadan,dmas,dsasadksd
-                    dsdnjasdjndsndasndadsadsd
-                    assadsadsaddaadassa </p>
+                <span> O violino é um instrumento de cordas friccionadas criado na Itália no século XVI <br>
+                    e é considerado um dos mais importantes da música clássica. Ele possui quatro cordas <br>
+                    afinadas em ré, lá, mi e sol, e se destaca pelo timbre agudo, expressivo e versátil. <br>
+                    Seu papel pode variar desde linhas melódicas delicadas até solos intensos, sendo usado <br>
+                    tanto em orquestras quanto em músicas populares.</span>
             </div>
         </section>
 
         <section class="aprender_violino" id="aprender_violino">
             <div class="av_conteudo">
                 <h1>Por que aprender violino?</h1>
-                <p>Blablablabla</p>
+                <span>Aprender violino vai muito além de tocar músicas bonitas. Veja os principais benefícios em
+                    aprender o instrumento. <br> <br> </span>
             </div>
             <div class="beneficio">
                 <div class="beneficio1">
                     <img src="assets/checkbox.svg" alt="">
-                    <h3>AAcsss</h3>
+                    <h3>Disciplina e constância: Ajuda o aluno a criar hábitos mais organizados e comprometidos.</h3>
                 </div>
                 <div class="beneficio1">
                     <img src="assets/checkbox.svg" alt="">
-                    <h3>AAcsss</h3>
+                    <h3>Desenvolvimento cognitivo: A música estimula concentração, memória e raciocínio.</h3>
                 </div>
                 <div class="beneficio1">
                     <img src="assets/checkbox.svg" alt="">
-                    <h3>AAcsss</h3>
+                    <h3>Saúde emocional: Tocar um instrumento reduz estresse e melhora o bem-estar mental.</h3>
                 </div>
                 <div class="beneficio1">
                     <img src="assets/checkbox.svg" alt="">
-                    <h3>AAcsss</h3>
+                    <h3>Superação e foco: A evolução no violino acontece em etapas, fortalecendo a resiliência.</h3>
                 </div>
             </div>
             <div class="desafio_aprender">
-                <p>Mas... aprender violino não é fácil, ...um dos mais complexos do mundo...</p> <br>
-                <p>É então que surge a ideia do projeto...</p>
+                <span>Mas aprender violino não é fácil. Ele é considerado um dos instrumentos mais complexos do mundo,
+                    exigindo técnica, postura, precisão e dedicação diária.</span> <br>
+                <span>E é justamente para facilitar essa caminhada que surgiu a ideia do <b>Violin Study</b>, um website
+                    feito para ajudar <br> estudantes a organizarem seus estudos, manterem motivação e acompanharem seu
+                    progresso.</span>
             </div>
         </section>
 
         <section class="sobre_mim" id="sobre_mim">
             <div class="sm_conteudo">
                 <h1>Sobre mim</h1>
-                <p> Aopasopslkdsndsadan,dmas,dsasadksd
-                    dsdnjasdjndsndasndadsadsd <br>
-                    assadsadsaddaadasschiuhasuihasuidhasidhiua </p>
+                <span> Meu nome é Felipe, tenho 19 anos e toco violino há mais de 10 anos na minha igreja. <br>
+                    Desde pequeno, sempre estive perto da música, pois cresci vendo a orquestra tocar, e o som <br>
+                    dos violinos chamava muito minha atenção. Foi ali que nasceu a vontade de aprender. <br> <br>
+                    Com o tempo, comecei meus estudos e fui evoluindo aos poucos, enfrentei muitos desafios, <br>
+                    fases de muito treino e outros momentos que tive que recomeçar. A música sempre fez parte <br>
+                    da minha vida e me ensinou a ser mais disciplinado, paciente e dedicado. <br> <br>
+                    Em 2022, tive a oportunidade de me tornar professor voluntário de violino na própria igreja <br>
+                    onde tudo começou. Hoje, além de continuar estudando, ajudo outras pessoas a aprenderem a música.
+                </span>
             </div>
-            <img src="assets/computador.png">
+            <img src="assets/sobre_mimm.jpg">
         </section>
 
         <section class="proposta_projeto" id="proposta_projeto">
             <div class="pp_conteudo">
                 <h1>Propostas do projeto</h1>
                 <div class="container_proposta">
-                    <div class="proposta1">A</div>
-                    <div class="proposta2">A</div>
-                    <div class="proposta3">A</div>
+                    <div class="proposta1">
+                        <h1>Registre seus estudos</h1>
+                        <span>Anote o dia do estudo, tempo estudado e a maior dificuldade que teve.</span>
+                    </div>
+                    <div class="proposta2">
+                        <h1>Defina suas metas</h1>
+                        <span>Crie objetivos com uma quantidade de estudos até certa data.</span>
+                    </div>
+                    <div class="proposta3">
+                        <h1>Veja seu desempenho</h1>
+                        <span>Visualize gráficos e indicadores dos estudos em uma dashboard.</span>
+                    </div>
                 </div>
             </div>
         </section>
