Atualização - Estilização do site institucional.

--- a/web-data-vizz/public/index.html
+++ b/web-data-vizz/public/index.html
@@ -116,17 +116,31 @@
             </div>
         </section>
 
-        <section class="pergunta_footer" id="pergunta_footer">
-            <div class="pf_conteudo">
-                <h1>Perguntas frequentes</h1>
-                <div class="container_pergunta">
-                    <div class="pergunta1">Pergunta 1</div>
-                    <hr>
-                    <div class="pergunta2">Pergunta 2</div>
-                    <div class="pergunta3">Pergunta 3</div>
+        <section class="ods" id="ods">
+            <h1>ODS's que o ViolinStudy atende</h1>
+            <div class="ods_conteudo">
+                <div class="ods3">
+                    <span>Meu projeto atende ela.</span>
+                    <img src="assets/ods3.jpg">
+                </div>
+                <div class="ods4">
+                    <span>Meu projeto a atende.</span>
+                    <img src="assets/ods4.png">
                 </div>
             </div>
         </section>
+
+        <section class="contato" id="contato">
+            <div class="formulario_contato">
+                <h1>Entre em contato</h1>
+                <input class="cttNome" type="text" id="input_nome">
+                <input class="cttEmail" type="text" id="input_email">
+                <input class="cttTexto" type="text" id="input_mensagem">
+                <button class="botaoEnviar">Enviar</button>
+            </div>
+        </section>
+
+
     </main>
 
     <footer id="footer">
